fix(ui): shrink navbar button not showing in mobile screen

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -89,6 +89,7 @@
 }
 
 .side-menu {
+    margin-top: 75px;
     position: fixed;
     background: $main-purple;
     right: 0;
